src/snapshots/rv__configure__tests__configure_update_url_by_alias.snap
---
source: src/configure.rs
expression: result
---
[project]
name = "test"
r_version = "4.4"
repositories = [
    { alias = "posit", url = "https://packagemanager.posit.co/cran/latest" }
]
dependencies = [
    "dplyr",
]
